--- a/serveur/Makefile
+++ b/serveur/Makefile
@@ -5,16 +5,16 @@
 #                                                     +:+ +:+         +:+      #
 #    By: vdefilip <vdefilip@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2014/06/18 17:17:50 by vdefilip          #+#    #+#              #
-#    Updated: 2014/06/18 17:17:50 by vdefilip         ###   ########.fr        #
+#    Created: 2014/06/20 10:53:12 by vdefilip          #+#    #+#              #
+#    Updated: 2014/06/20 10:53:12 by vdefilip         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME=serveur
-VERSION=1.1.7
+VERSION=1.1.8
 CFLAGS=-Wall -Werror -Wextra -g
-INCLUDES=-I libft/includes
-LIBS=-L libft -l ft
+INCLUDES=-I ./libft/includes
+LIBS=-L ./libft -l ft
 
 SRC=bot.c \
 	client_handler.c \
@@ -30,8 +30,6 @@ SRC=bot.c \
 	opt.c \
 	parse_request.c \
 	rand.c \
-	requests.c \
-	responses.c \
 	server.c \
 	timer.c \
 	try.c \
@@ -41,12 +39,12 @@ OBJ=$(SRC:.c=.o)
 all: build $(NAME) finish
 
 build:
-	@($(MAKE) -C libft)
+	@($(MAKE) -C ./libft)
 
-$(NAME): $(OBJ) libft/libft.a
+$(NAME): $(OBJ) ./libft/libft.a
 	gcc $(CFLAGS) $(INCLUDES) -o $(NAME) $(OBJ) $(LIBS)
 
-%.o: %.c requests.h server.h libft/includes
+%.o: %.c requests.h server.h ./libft/includes
 	gcc $(CFLAGS) $(INCLUDES) -o $@ -c $<
 
 clean:
@@ -54,7 +52,7 @@ clean:
 
 fclean: clean
 	@(rm -rf $(NAME))
-	@($(MAKE) -C libft fclean)
+	@($(MAKE) -C ./libft fclean)
 
 re: fclean all
 
